fix: 백엔드 보안·버그·N+1·예외처리·응답코드 전반 개선
- SecurityConfig: /api/sync/**, /api/shows/*/casting/refresh 인증 필수 처리
- DiaryService: getPublicDiaryByShow showId/userId 혼용 버그 수정
- DiaryEntryRepository: 목록·캘린더·공개 다이어리 조회에 fetch join 적용
- CompanionService: 전체 메서드 BusinessException으로 예외 통일
- CompanionService: 동행 목록 조회 시 N+1 → 배치 쿼리로 개선
- ChatRoomRepository: getMyRooms에 show fetch join 추가
- ChatMessageRepository: deleteByRoomId 벌크 삭제 쿼리 추가
- CompanionParticipantRepository: deleteByCompanionPostId 벌크 삭제 추가
- ReviewService: 좋아요·댓글 수 조회 N+1 → 배치 쿼리로 개선
- AuthController: signUp 200 → 201 CREATED
- CompanionController: joinCompanion 200 → 201, cancelJoin/close 200 → 204